// Copyright (c) 2018 SafetyCulture Pty Ltd. All Rights Reserved.

syntax = "proto3";
package validator;

import "google/protobuf/descriptor.proto";

option go_package = "github.com/SafetyCulture/s12-proto/protobuf/s12proto";

extend google.protobuf.FieldOptions {
  // Field value validates to a 128 bit universally unique identifier
  bool uuid = 65200;
  // Uses a Golang RE2-syntax regex to match the field contents.
  string regex = 65201;
  // Field value of integer strictly greater than this value.
  int64 int_gt = 65202;
  // Field value of integer strictly smaller than this value.
  int64 int_lt = 65203;
  // Field value of integer greater or equal than this value.
  int64 int_gte = 65204;
  // Field value of integer smaller or equal than this value.
  int64 int_lte = 65205;
  // Field value of length greater than this value.
  int64 length_gte = 65206;
  // Field value of length smaller than this value.
  int64 length_lte = 65207;
  // Validation only applies to non-zero values.
  bool optional = 65208;
  // Validates that an inner message is required.
  bool msg_required = 65209;
  // Field value validates to an upper case universally unique identifier or a globallyUniqueString (from iOS)
  bool legacy_id = 65210;
}